First commit for local

--- a/app/assets/javascripts/templates/order_book_ask.jst.ejs
+++ b/app/assets/javascripts/templates/order_book_ask.jst.ejs
@@ -4,7 +4,9 @@
   </div></td>
   <td class="volume col-xs-7"><div>
     <%= formatter.mask_fixed_volume(volume) %>
-  </div></td>
+  </div>
+<g>Click here</g>
+</td>
   <td class="amount col-xs-10"><div>
     <%= formatter.amount(volume, price) %>
   </div></td>
