--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -542,7 +542,7 @@ header {
     }
     .form-control {
       border-color: $border-color;
-      color: $text-color;
+      color: white;
     }
 
     label.input-group-addon {
@@ -556,7 +556,7 @@ header {
       padding: 3px 6px 0px 6px;
       min-width: 40px;
       text-align: left;
-      color: $main-gray;
+      color: $text-color;
     }
 
     input {
@@ -578,7 +578,7 @@ header {
     z-index: 10;
   }
 
-  .label { font-size: inherit; color: $brand-danger;}
+  .label { font-size: inherit; }
   .label.label-info { color: $brand-info }
   .label.label-success { color: $brand-success }
   .label.label-danger { color: $brand-danger; background-color: transparent; }
@@ -602,7 +602,7 @@ header {
 
 /* order-book trades my-orders table
 ---------------------------------------------------*/
-.col-left { padding-right: 10px; }
+.col-left { padding-right: 12px; }
 .panel-body-head { border-bottom: 1px solid $border-color; }
 
 #ticker, #order_book, #market_trades, #my_orders, #market_list {
@@ -660,7 +660,7 @@ table {
   padding: 6px 0 6px 6px;
   font-size: 11px;
 
-  & > div { display: inline-block; }
+  & > div { display: inline-block; width: 70px; }
   & > div.tooltip-ma { width: 76; margin-top: 3px; }
   & > div.tooltip-ticker { margin-top: 5px; }
 
@@ -678,8 +678,7 @@ table {
     color: $text-color !important;
     font-family: $font-family-monospace;
     text-align: right;
-    margin-left: 5px;
-    font-size: 10px;
+    margin-right: 15px;
   }
 }
 
