Change some miminor UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Coinvest</title>
+    <title>COOPEX Trading</title>
 
     <meta name="description" content="Exchange">
 
@@ -52,5 +52,5 @@
     <script src="http://ec2-54-202-248-61.us-west-2.compute.amazonaws.com:4000/market_header.js"></script>
     <script src="http://ec2-54-202-248-61.us-west-2.compute.amazonaws.com:4000/market_logic.js"></script> -->
   </head>
-  <body ng-app="coinvest" class="theme--light"><%= yield %></body>
+  <body ng-app="" class="theme--light"><%= yield %></body>
 </html>
