--- a/app/views/markets/_header.html.erb
+++ b/app/views/markets/_header.html.erb
@@ -168,7 +168,7 @@
             </div>
 
             <label class="checkbox-container sign-up__checkbox-container">
-            I agree to Coinvest’s
+            I agree to COOPEX’s
             <a href="" class="checkbox-container__text--bold">Terms of Service</a> and
             <a href="" class="checkbox-container__text--bold">Privacy Policy</a>
             <input type="checkbox" checked="checked">
