--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,5 +52,5 @@
     <script src="http://ec2-54-202-248-61.us-west-2.compute.amazonaws.com:4000/market_header.js"></script>
     <script src="http://ec2-54-202-248-61.us-west-2.compute.amazonaws.com:4000/market_logic.js"></script> -->
   </head>
-  <body ng-app="" class="theme--light"><%= yield %></body>
+  <body ng-app="coinvest" class="theme--light"><%= yield %></body>
 </html>
