Order History Fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -590,7 +590,7 @@ header {
 .col-left { padding-right: 12px; }
 .panel-body-head { border-bottom: 1px solid $border-color; }
 
-#ticker, #order_book, #market_trades, #my_orders, #market_list {
+#ticker, #order_book, #market_trades, #order_history, #market_list {
   table {
     margin-bottom: 0px;
 
