--- a/app/views/markets/show.html.erb
+++ b/app/views/markets/show.html.erb
@@ -108,7 +108,7 @@
     <!--End Of Order book-->
 
     <!--Order history-->
-    <%= render partial: 'my_orders' %>
+    <%= render partial: 'order_history' %>
     
     <!--End of order history-->
 
