--- a/app/assets/javascripts/templates/order_active.jst.ejs
+++ b/app/assets/javascripts/templates/order_active.jst.ejs
@@ -1,21 +1,16 @@
 <% trade_state = (origin_volume == volume) ? 'new' : 'partial' %>
 
-<tr data-id="<%= id %>" data-kind="<%= kind %>" class="order <%= kind %> form__column-container form__column-container-value">
-  
-  <!-- <td class="form__column order-book__column form__column-value">
-    <span class="label label-<%= kind %>"><%= formatter.short_trade(kind) %></span><span class="label label-<%= trade_state %>"><%= gon.i18n.trade_state[trade_state] %></span>
-  </td> -->
-  <td class="form__column order-history__column form__column-value">
-    <span><%= formatter.mask_fixed_volume(volume) %></span>
-  </td>
-  <td class="form__column order-history__column form__column-value <%= formatter.trend(kind) %>">
+<div data-id="<%= id %>" data-kind="<%= kind %>" class="order <%= kind %> form__column-container form__column-container-value">
+  <div class="form__column order-history__column form__column-value">
+      <span><%= formatter.mask_fixed_volume(volume) %></span>
+  </div>
+  <!--<div class="form__column order-history__column form__column-value text--red red-before">
+      <span><%= formatter.mask_fixed_volume(volume) %></span>
+  </div>-->
+  <div class="form__column order-history__column form__column-value <%= formatter.trend(kind) %>">
     <span><%= formatter.mask_fixed_price(price) %></span>
-  </td>
-  
-  <!-- <td class="form__column order-book__column form__column-value">
-    <span><%= formatter.amount(volume, price) %></span>
-  </td> -->
-  <td class="form__column order-history__column form__column-value">
+  </div>
+  <div class="form__column order-history__column form__column-value">
     <span><%= formatter.fulltime(at) %></span>
-  </td>
-</tr>
+  </div>
+</div>
