--- a/app/views/markets/_order_book.html.erb
+++ b/app/views/markets/_order_book.html.erb
@@ -4,7 +4,7 @@
     <h2 class="title">Order Book</h2>
   </div>
   <%= render partial: 'ticker' %>
-  <div id="order_book" class="form__body order-book__body">
+  <div id="order_book" class="form__body order-book__body" style="min-height: 440px;">
     <div class="order_book_header" style="width:50%; border-right:1px solid #151d2b">
       <div class="form__column-container order-book__column-container">
         <div class="form__column order-book__column">Amount</div>
