--- a/app/views/markets/_ask_entry.html.erb
+++ b/app/views/markets/_ask_entry.html.erb
@@ -36,7 +36,7 @@
                   <span class="buy-sell__btn-mark--extra"><%= market.fetch(:bid_unit).upcase %></span>
                 </p>
             </div>
-            <!-- <%= render partial: 'balance', locals: { currency: market.fetch(:ask_unit).upcase } %> -->
+            <%= render partial: 'balance', locals: { currency: market.fetch(:ask_unit).upcase } %>
 
             <button class="buy-sell__btn btn btn--blue" type="submit">
               <%= t('.action', currency: market.fetch(:ask_unit).upcase) %>
