--- a/app/views/markets/_balance.html.erb
+++ b/app/views/markets/_balance.html.erb
@@ -1,9 +1,10 @@
-<div class="row row-tips">
-  <div class="col-xs-24 text-right">
-    <span class="label label-info status-info"></span>
-    <span class="label label-success status-success"></span>
-    <span class="label label-danger status-danger"></span>
-    <span class="current-balance number"></span>
-    <span class="unit"><%= currency %></span>
-  </div>
+<div class="buy-sell__btn-block-header">
+    <div class="buy-sell__btn-title">Balance</div>
+    <p class="buy-sell__btn-mark">
+      <span class="label label-info status-info"></span>
+      <span class="label label-success status-success"></span>
+      <span class="label label-danger status-danger"></span>
+      <span class="current-balance number"></span>
+      <span class="buy-sell__btn-mark--extra"><%= currency %></span>
+    </p>
 </div>
