FIx the isssues

--- a/app/views/markets/_order_book.html.erb
+++ b/app/views/markets/_order_book.html.erb
@@ -6,11 +6,11 @@
   <%= render partial: 'ticker' %>
   <div id="order_book" class="form__body order-book__body" style="min-height: 440px;">
     <div class="order_book_header" style="width:50%; border-right:1px solid #151d2b">
-      <div class="form__column-container order-book__column-container">
+      <div class="form__column-container order-book__column-container" >
         <div class="form__column order-book__column">Amount</div>
         <div class="form__column order-book__column">Bid</div>
       </div>
-      <div class="order-book__order-form-container">
+      <div class="order-book__order-form-container" style="height:100%;">
         <div class="order-book-bid"></div>
       </div>
     </div>
@@ -19,7 +19,7 @@
         <div class="form__column order-book__column">Ask</div>
         <div class="form__column order-book__column">Amount</div>
       </div>
-      <div class="order-book__order-form-container">
+      <div class="order-book__order-form-container" style="height:100%;">
         <div class="order-book-ask"></div>
       </div>
     </div>
