Complete the UI

--- a/app/views/markets/_indicator_switch.html.erb
+++ b/app/views/markets/_indicator_switch.html.erb
@@ -1,5 +1,5 @@
-<div id="indicator_switch_wrapper" class="select-menu-container">
-  <ul class="select-menu invisible--mobile" style="margin:0px;padding:0px;">
+<div id="indicator_switch_wrapper" class="switch select-menu-container">
+  <ul class="select-menu invisible--mobile list-inline" style="margin:0px;padding:0px;">
     <li style="list-style-type: none;" class="select-menu__item">
       <ul id="type_switch" class="select-menu indicator_switch list-inline" data-x="candlestick" style="margin:0px;padding:0px;">
         <li class="text-center select-menu__item" style="list-style-type: none;">
@@ -35,18 +35,3 @@
     </li>
   </ul>
 </div>
-<!-- <div class="select-menu-container">
-  <div class="select-menu invisible--mobile">
-    <div class="select-menu__item select-menu__item--active" onclick="selectDropdownItem('chart-type', 'candle')">Candle</div>
-    <div class="select-menu__item" onclick="selectDropdownItem('chart-type', 'line')">Line</div>
-    <div class="select-menu__item" onclick="selectDropdownItem('chart-type', 'depth')">Depth</div>
-  </div>
-  <div class="select-dropdown-menu invisible--tablet invisible--desktop">
-    <div onclick="toggleShow('chart-type')" class="select-dropdown-menu__info">Candle</div>
-    <div id="chart-type-dropdown-id" class="select-dropdown-menu__list">
-      <div class="select-dropdown-menu__list-item" onclick="selectDropdownItem('chart-type', 'candle')">Candle</div>
-      <div class="select-dropdown-menu__list-item" onclick="selectDropdownItem('chart-type', 'line')">Line</div>
-      <div class="select-dropdown-menu__list-item" onclick="selectDropdownItem('chart-type', 'depth')">Depth</div>
-    </div>
-  </div>
-</div> -->
