--- a/app/views/markets/_order_book.html.erb
+++ b/app/views/markets/_order_book.html.erb
@@ -8,6 +8,7 @@
     <div class="order_book_header" style="width:50%; border-right:1px solid #151d2b">
       <div class="form__column-container order-book__column-container" >
         <div class="form__column order-book__column">Amount</div>
+        <div class="form__column order-book__column">Volume</div>
         <div class="form__column order-book__column">Bid</div>
       </div>
       <div class="order-book__order-form-container" style="height:100%;">
@@ -17,6 +18,7 @@
     <div class="order_book_header" style="width:49%;">
       <div class="form__column-container order-book__column-container">
         <div class="form__column order-book__column">Ask</div>
+        <div class="form__column order-book__column">Volume</div>
         <div class="form__column order-book__column">Amount</div>
       </div>
       <div class="order-book__order-form-container" style="height:100%;">
