--- a/app/views/markets/_market_trades.html.erb
+++ b/app/views/markets/_market_trades.html.erb
@@ -38,19 +38,19 @@
   <div class="form__header order-list__header">
     <h2 class="title">Orders</h2>
     <!--Select menu-->
-    <div class="select-menu-container">
+    <!-- <div class="select-menu-container">
       <div class="select-menu invisible--mobile">
-        <div class="select-menu__item select-menu__item--active" onclick="selectDropdownItem('order-type',this)">Open</div>
-        <div class="select-menu__item" onclick="selectDropdownItem('order-type',this)">Filled</div>
+        <div class="select-menu__item select-menu__item--active" onclick="selectDropdownItem('order-type',this)">Buy</div>
+        <div class="select-menu__item" onclick="selectDropdownItem('order-type',this)">Sell</div>
       </div>
       <div class="select-dropdown-menu invisible--tablet invisible--desktop">
-        <div onclick="toggleShow('order-type')" class="select-dropdown-menu__info">Open</div>
+        <div onclick="toggleShow('order-type')" class="select-dropdown-menu__info">Buy</div>
         <div id="order-type-dropdown-id" class="select-dropdown-menu__list">
-          <div onclick="selectDropdownItem('order-type')" class="select-dropdown-menu__list-item">Open</div>
-          <div onclick="selectDropdownItem('order-type')" class="select-dropdown-menu__list-item">Filled</div>
+          <div onclick="selectDropdownItem('order-type')" class="select-dropdown-menu__list-item">Buy</div>
+          <div onclick="selectDropdownItem('order-type')" class="select-dropdown-menu__list-item">Sell</div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <div id="market_trades" class="form__body order-list__body">
     <div class="form__column-container order-list__column-container">
