--- a/app/views/markets/_order_book.html.erb
+++ b/app/views/markets/_order_book.html.erb
@@ -12,7 +12,7 @@
         <div class="form__column order-book__column">Bid</div>
       </div>
       <div class="order-book__order-form-container" style="height:100%;">
-        <div class="order-book-bid"></div>
+        <div class="order-book-bid bids"></div>
       </div>
     </div>
     <div class="order_book_header" style="width:49%;">
@@ -22,7 +22,7 @@
         <div class="form__column order-book__column">Amount</div>
       </div>
       <div class="order-book__order-form-container" style="height:100%;">
-        <div class="order-book-ask"></div>
+        <div class="order-book-ask asks"></div>
       </div>
     </div>
   </div>
